--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -10,3 +10,24 @@
 	position:relative;top:90px;left:40px;
 	}
 	
+.yazi {
+	
+	p {
+		font-size :20px;
+		line-height:30px   
+	}
+}
+
+.resim {
+	position:absolute;top:20px;left:450px;
+	}
+
+#resim_yazi{
+	width:300px;
+	position:absolute;top:100px;left:600px;
+	font-size:15px;
+	
+	}
+	
+
+	
