--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,18 +1,14 @@
 <div class = "container">
 	<div class = "tablo_konum">
 
-<h1>Listing forms</h1>
+<h1>Admin Panel</h1>
 
 <table class = table table-bordered table-striped table-hover">
   <tr>
     <th>Name</th>
     <th>Surname</th>
-    <th>Email</th>
-    <th>Telephone</th>
-    <th>Address</th>
-    <th>Country</th>
-    <th>Institution</th>
-    <th>Program</th>
+    <th>Created Time</th>
+    <th>Updated Time</th>
     <th></th>
     <th></th>
     <th></th>
@@ -22,12 +18,8 @@
   <tr>
     <td><%= form.name %></td>
     <td><%= form.surname %></td>
-    <td><%= form.email %></td>
-    <td><%= form.telephone %></td>
-    <td><%= form.address %></td>
-    <td><%= form.country %></td>
-    <td><%= form.institution %></td>
-    <td><%= form.program %></td>
+    <td><%= form.created_at %></td>
+    <td><%= form.updated_at %></td>
     <td><%= button_to 'Show', form ,class: "btn btn-primary" %></td>
     <td><%= button_to 'Edit', edit_form_path(form),class: "btn  btn-warning" %></td>
     <td><%= button_to 'Destroy', form, confirm: 'Are you sure?', method: :delete , class: "btn btn-info" %></td>
