--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -45,19 +45,19 @@
 		<%= f.text_area :address , style: "width:6in;height:200px;" %>
 	  </div>
 	  <div class="field">
-		<%= f.label :country %><br />
-		<%= f.text_field :country , style: "width:6in;"%>
-	  </div>
-	  <div class="field">
 		<%= f.label :institution %><br />
 		<%= f.text_field :institution , style: "width:6in;" %>
 	  </div>
 	  <div class="field">
+		<%= f.label :country %><br />
+		<%= f.select :country, Country.all.collect{|t|[t.name]}%>
+	  </div>
+	  <div class="field">
 		<%= f.label "program  *" %><br />
-		<% @programs = {'Sağlık Kurumları Yönetimi Yüksek Lisans Programı' => 1, 'Acil Tıp Hemşireliği Yüksek Lisans Programı' => 2, 'Evde Bakım Hemşireliği Yüksek Lisans Programı' => 3, 'Diger Secenek' => 4} %>
+		<% @programs = {'Sağlık Kurumları Yönetimi Yüksek Lisans Programı' => 1, 'Acil Tıp Hemşireliği Yüksek Lisans Programı' => 2, 'Evde Bakım Hemşireliği Yüksek Lisans Programı' => 3, 'Diğer Seçenek' => 4} %>
 		<%= f.select :program ,  \
 			options_for_select(@programs.keys),\
-			{}, :onchange => "if( this.options[selectedIndex].text == 'Diger Secenek' ) {gizli()} else {show()}" %>
+			{}, :onchange => "if( this.options[selectedIndex].text == 'Diğer Seçenek' ) {gizli()} else {show()}" %>
 		<div class = "gizli">
 			<div class="field">
 				<%= f.text_field :new_program , style: "width:6in;"%>
