admin paneli:ok

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -5,6 +5,10 @@
 .konum {
 	position:relative;top:90px;left:350px;
 	}
+
+.login {
+	position:relative;top:150px;left:350px;
+	}
 	
 .tablo_konum {
 	position:relative;top:90px;left:40px;
@@ -30,6 +34,7 @@
 	}
 
 .gizli {display:none;}
-	
+
+
 
 	
