--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -28,6 +28,7 @@
 </table>
 
 <br />
+<%= button_to "Çıkış",logout_url,class: "btn  btn-warning", style:"width:100px;position:relative;left:5in;" %>
 
 
 </div>
