--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
               <li class="active"><a href="/">Ana Sayfa</a></li>
             </ul>
             <ul class="nav pull-right" >
-				
+				<li class="dropdown">
+					<a href="/sessions/new" class="dropdown-toggle" data-toggle="dropdown">Admin Paneli</a>
+				</li>
 				<li> <% if flash[:error] %>
 				  <div class="alert alert-error">
 					<%= flash[:error] %>
