--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -44,7 +44,7 @@
 	</div>
 
 	<%= button_to 'Edit', edit_form_path(@form) , class: "btn btn-primary" ,style: "width:100px;" %> 
-	<%= button_to 'Back', root_url ,class: "btn btn-warning" ,style: "width:100px;position:relative;top:-52px;left:120px;" %>
+	<%= button_to 'Back', ("/finish") ,class: "btn btn-warning" ,style: "width:100px;position:relative;top:-52px;left:120px;" %>
 </div>
 	
 
