--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <div class="navbar-inner">
         <div class="container">
           
-          <a class="brand" href="/" >ÖN KAYIT VE TALEP FORMU</a>
+          <a class="brand" href="#" >ÖN KAYIT VE TALEP FORMU</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="/">Ana Sayfa</a></li>
